--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Doc&amp;Patients</string>
     <string name="todo">TODO</string>
+    <string name="welcome_to_docpatients">WELCOME TO DOCPATIENTS</string>
 </resources>
